public interface Comparable {
    public boolean compare(Comparable another);
}
