public class Genie extends Creature{
}
