public class Goblin extends Genie {
    @Override
    public String toString(){
        return "妖";
    }
}
