public class GoodOnes extends Creature {
}
