public interface Sorter {
    public void sort(Position[] layout,int size);
}
